# SDL

./: .gitignore  BUILD.bazel  MODULE.bazel  sdl_setting.bzl
include/: SDL_config_bazel.h.in
test/: BUILD.bazel
